# dissertation-cbrem

./: .gitignore  AGENTS.md  _temp_inputs.txt  clarifier_costs.xlsx  pyproject.toml  requirements.txt  test.py
data/: data.xlsx  initial_conditions.parquet  input_config.parquet  model_comparison.xlsx  optimization_config.xlsx  optimization_results.xlsx  plant_optimization_results.xlsx  ~$training_statistics.xlsx
data/config/: data.xlsx  optimization_config.xlsx
data/copies/: optimization_config.xlsx  optimization_results.xlsx  reconstructed_clefo_test.xlsx
data/simulation_backup/: all_input_clarifier.csv  all_input_flows.csv  all_output_clarifier.csv  optimization_config.xlsx  optimization_results.xlsx
models/: clefo_model.joblib
models/a2o_reactor/: a2o_reactor.joblib
models/aao/: aao.joblib
models/clarifier/: clarifier.joblib
models/cstr/: cstr.joblib
scripts/: cloud_run_simulation.bat  local_automated_run.bat
src/: naming.py
src/analysis/: compare_simVSopt.py  compare_sim_vs_opt.py  compile_training_results.py  generate_predictions.py  retrieve_coefficients.py  train_and_comprehensive_analysis.py
src/comparison/: compare_simVSopt.py  comparison_simulation_optimization.py  test.py
src/data_conversion/: simulation_parquet.py
src/main_optimization/: pyomo_a2o_nonlinear.py  pyomo_nonlinear.py  pyomo_nonlinear_orig.py  reconstructed_clefo.py
src/main_simulation/: cloud_run_simulation.py  main.py  main_simulation.py  main_with_bayesian_opt.py
src/main_training/: train_clefo.py
src/optimization/: pyomo_aao_nonlinear.py  pyomo_aao_nonslacked.py  (+6 more)
(+80 files in other folders)
